scroll code blocks on overflow and fix build

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -262,6 +262,7 @@ article,
     border: 1px solid #ddd;
     border-radius: 5px;
     padding: 0.25em 0.5em;
+    overflow-x: scroll;
   }
 
   tt {
