--- a/static/fetch.css
+++ b/static/fetch.css
@@ -705,6 +705,7 @@ picture {
   src: url("fetch.eot?#iefix") format("embedded-opentype"), url("fetch.ttf") format("truetype"), url("fetch.woff") format("woff"), url("fetch.svg#fetch") format("svg");
   font-weight: normal;
   font-style: normal; }
+
 body {
   max-width: 68em;
   margin-left: auto;
@@ -731,9 +732,9 @@ main,
 .main {
   float: left;
   display: block;
-  margin-right: 2.35765%;
-  width: 65.88078%;
-  margin-left: 17.05961%; }
+  margin-right: 2.3576515979%;
+  width: 65.8807828007%;
+  margin-left: 17.0596085997%; }
   main::after,
   .main::after {
     clear: both;
@@ -746,9 +747,9 @@ main,
 .site-footer {
   float: left;
   display: block;
-  margin-right: 2.35765%;
-  width: 48.82117%;
-  margin-left: 25.58941%;
+  margin-right: 2.3576515979%;
+  width: 48.821174201%;
+  margin-left: 25.5894128995%;
   border-top: 4px solid #000;
   margin-top: 2.5em;
   padding-top: 0.75em; }
@@ -763,9 +764,9 @@ main,
 .site-header {
   float: left;
   display: block;
-  margin-right: 2.35765%;
-  width: 48.82117%;
-  margin-left: 25.58941%;
+  margin-right: 2.3576515979%;
+  width: 48.821174201%;
+  margin-left: 25.5894128995%;
   border-bottom: 8px solid #000;
   margin-bottom: 2.5em;
   margin-top: 1em;
@@ -790,7 +791,7 @@ main,
       -moz-transition: all 0.5s ease-in-out;
       transition: all 0.5s ease-in-out;
       display: inline-block;
-      margin-bottom: 0.61805em; }
+      margin-bottom: 0.6180469716em; }
   .site-header .links {
     margin-bottom: 0;
     margin-top: 20px;
@@ -807,8 +808,8 @@ main,
   .site-header .buttons a {
     float: left;
     display: block;
-    margin-right: 2.35765%;
-    width: 48.82117%;
+    margin-right: 2.3576515979%;
+    width: 48.821174201%;
     background-color: #f00;
     box-sizing: border-box;
     font-size: 0;
@@ -833,7 +834,7 @@ main,
       display: inline-block;
       font-size: 1.618rem;
       position: relative;
-      height: 2.61792rem;
+      height: 2.617924rem;
       width: 100%; }
       .site-header .buttons a i:before {
         bottom: 0;
@@ -871,8 +872,8 @@ main,
       .archive ol li.header h3 {
         float: left;
         display: block;
-        margin-right: 2.35765%;
-        width: 14.70196%;
+        margin-right: 2.3576515979%;
+        width: 14.7019570017%;
         margin-top: 0;
         padding-top: 0; }
         .archive ol li.header h3:last-child {
@@ -882,18 +883,19 @@ main,
     .archive ol li time {
       float: left;
       display: block;
-      margin-right: 2.35765%;
-      width: 23.23176%;
+      margin-right: 2.3576515979%;
+      width: 23.2317613015%;
       color: #aaa; }
       .archive ol li time:last-child {
         margin-right: 0; }
     .archive ol li span {
       float: left;
       display: block;
-      margin-right: 2.35765%;
-      width: 74.41059%; }
+      margin-right: 2.3576515979%;
+      width: 74.4105871005%; }
       .archive ol li span:last-child {
         margin-right: 0; }
+
 .archive .pagination {
   text-align: center; }
   .archive .pagination span {
@@ -931,6 +933,7 @@ article header,
   .hentry header .meta {
     font-size: 0.75em;
     text-align: center; }
+
 article section,
 .hentry section {
   margin-bottom: 1em; }
@@ -945,17 +948,21 @@ article section,
     .hentry section.comments p {
       font-weight: bold;
       text-align: center; }
+
 article pre,
 .hentry pre {
   background: #efefef;
   border: 1px solid #ddd;
   border-radius: 5px;
-  padding: 0.25em 0.5em; }
+  padding: 0.25em 0.5em;
+  overflow-x: scroll; }
+
 article tt,
 .hentry tt {
   background: #fd9;
   border-radius: 5px;
   padding: 0.25em; }
+
 article ul, article ol,
 .hentry ul,
 .hentry ol {
@@ -966,19 +973,24 @@ article ul, article ol,
   .hentry ul li,
   .hentry ol li {
     margin-bottom: 0.5em; }
+
 article ul,
 .hentry ul {
   list-style-type: square; }
+
 article .arabic,
 .hentry .arabic {
   list-style-type: decimal; }
+
 article .footnote .label,
 .hentry .footnote .label {
   width: 2em; }
+
 article .footnote-reference,
 .hentry .footnote-reference {
   padding-left: .2em;
   padding-right: .2em; }
+
 article footer .tags,
 .hentry footer .tags {
   list-style: none; }
@@ -996,5 +1008,3 @@ article footer .tags,
   display: block;
   margin-left: auto;
   margin-right: auto; }
-
-/*# sourceMappingURL=fetch.css.map */
